# legit-poker

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md  README_DB.md  ledger_operator_mermaid.mmd  ledger_operator_rfc.md
.claude/agents/: frontend-designer.md
.claude/commands/: commit-message.md  verify-api-types.md
.claude/commands/design/: brand-tokens.md  figma-brand.md  figma.md  hero-variants.md  lobby-audit.md  plan.md
.zed/: settings.json
docs/: catchup_test_plan.md  catchup_test_tickets.md  demo_spec.md  game_hand_lifecycle.mmd  ledger_operator_classes.mmd  ledger_verifier_validation.md
examples/: game_launch_and_shuffle_flow.rs
prisma/: schema.prisma
prisma/migrations/20250911204907_init_test/: migration.sql
scripts/: setup_icicle_metal.sh
src/: config.rs  crypto_serde.rs  curve_absorb.rs  debugging_tools.rs  field_conversion.rs  field_conversion_gadget.rs  lib.rs  logup.rs  macros.rs  pedersen_commitment_opening_proof.rs  player_service.rs  shuffler_service.rs  test_utils.rs  tokio_tools.rs
src/chaum_pedersen/: gadget.rs  mod.rs  native.rs
src/db/: mod.rs
src/db/entity/: events.rs  game_players.rs  game_shufflers.rs  games.rs  hand_configs.rs  hand_player.rs  hand_seating.rs  hand_shufflers.rs  hands.rs  mod.rs  phases.rs  players.rs  prelude.rs  sea_orm_active_enums.rs  shufflers.rs  table_snapshots.rs  test.rs
src/domain/: game_state.rs  mod.rs  transcript.rs
src/engine/: mod.rs
src/engine/nl/: actions.rs  engine.rs  errors.rs  events.rs  legals.rs  mod.rs  rules.rs  seating.rs  state.rs  tests.rs  types.rs
src/game/: betting.rs  card_ranking.rs  game_manager.rs  game_phases.rs  mod.rs  user_interface.rs
src/game/coordinator/: manager.rs  mod.rs  realtime.rs
src/game/coordinator/test_data/: sample_shuffle_event.json
src/gpu/: groth16_gpu.rs  mod.rs
src/ledger/: actor.rs  catchup.rs  hash.rs  identity.rs  messages.rs  mod.rs  operator.rs  player_hole_card.rs  queue.rs  serialization.rs  shuffler_signals.rs  snapshot.rs  state.rs  store.rs  test_support.rs  transition.rs  types.rs  verifier.rs  worker.rs
src/ledger/lobby/: error.rs  mod.rs  sea_orm.rs  service.rs  tests.rs  types.rs  validation.rs
src/ledger/lobby/storage/: in_memory.rs  mod.rs  sea_orm.rs
src/ledger/query/: latest_snapshot.rs  messages.rs  mod.rs
src/ledger/snapshot/: phases.rs
src/ledger/store/: mod.rs
src/ledger/store/event/: mod.rs  serialization.rs
src/ledger/store/snapshot/: mod.rs  serialization.rs
src/ledger/test_support/: mod.rs
src/ledger/typestate/: db_row_status.rs  mod.rs
src/pedersen_commitment/: bytes_opening.rs  error.rs  mod.rs  native.rs  opening_proof.rs  opening_proof_gadget.rs  windows.rs
src/player/: mod.rs  signing.rs
src/server/: bootstrap.rs  dto.rs  error.rs  logging.rs  mod.rs  routes.rs
src/server/demo/: dto.rs  handlers.rs  in_memory_stream.rs  mod.rs  phase_execution.rs  session_factory.rs  session_store.rs  state.rs  stream.rs  stream_event.rs
src/showdown/: e2e.rs  gadget.rs  hand_reveal_showdown_gadget.rs  mod.rs  native.rs
src/shuffler/: api.rs  cluster.rs  dealing.rs  hand_runtime.rs  mod.rs  service.rs  state.rs
src/shuffling/: chaum_pedersen.rs  chaum_pedersen_gadget.rs  circuit.rs  curve_absorb.rs  data_structures.rs  demo.rs  encryption.rs  error.rs  field_conversion_gadget.rs  game_events.rs  mod.rs  permutation_serialization.rs  player_decryption.rs  player_decryption_gadget.rs  player_encryption.rs  profiling_example.rs  proof_system.rs  proof_system_example.rs  prove.rs  public_key_setup.rs  scalar_multiplication_tests.rs  setup.rs  shuffling_proof.rs  test_scalar_mul.rs  test_utils.rs  unified_shuffler.rs  utils.rs
src/shuffling/bayer_groth/: commitment.rs  decomposition.rs  mod.rs  prover.rs  transcript.rs  types.rs  verifier.rs
src/shuffling/bayer_groth_permutation/: bg_setup.rs  bg_setup_gadget.rs  fiat_shamir.rs  gadgets.rs  linking_rs_gadgets.rs  linking_rs_native.rs  mod.rs  native.rs  reencryption_gadgets.rs  reencryption_protocol.rs  sigma_gadgets.rs  sigma_protocol.rs  sponge_ec_test.rs  tests.rs  utils.rs
src/shuffling/bayer_groth_permutation/tests/: sigma_tests.rs
src/shuffling/community_decryption/: mod.rs
src/shuffling/ipa/: error.rs  mod.rs  proof.rs
src/shuffling/og_shuffling/: circuit.rs  gadget.rs  mod.rs
src/shuffling/pedersen_commitment/: error.rs  mod.rs  opening_proof.rs  opening_proof_gadget.rs
src/shuffling/permutation_proof/: circuit.rs  mod.rs  proof_system.rs
src/shuffling/player_decryption/: gadget.rs  mod.rs  native.rs
src/shuffling/rs_shuffle/: bit_generation.rs  circuit.rs  data_structures.rs  mod.rs  native.rs  permutation.rs  rs_shuffle_gadget.rs  test_grumpkin_msm.rs  witness_preparation.rs
src/signing/: mod.rs
src/vrf/: cofactor.rs  gadgets.rs  mod.rs  native.rs  simple.rs  simple_gadgets.rs  tests.rs
supabase/: config.toml  seed.sql
supabase/migrations/: 20250817093709_init_schema.sql  20250911115900_enable_realtime_test.sql  20250914090000_init_schema.sql  20250914093000_ledger_operator.sql  20251010000000_add_sequence_to_game_shufflers.sql  20251014090000_snapshot_persistence.sql  20251021110000_snapshot_status.sql  20251101090000_full_schema.sql
zk_poker_frontend/: README.md  package-lock.json  package.json
zk_poker_frontend/prisma/: schema.prisma
zk_poker_frontend/src/: env.js
zk_poker_frontend/src/app/: layout.tsx  page.tsx
zk_poker_frontend/src/app/demo/: page.tsx
zk_poker_frontend/src/app/investor/: page.tsx
zk_poker_frontend/src/components/: Providers.tsx
zk_poker_frontend/src/hooks/: useDemoStream.ts  useInteractiveDemo.ts  useScrollAnimation.ts  useSmoothScroll.ts
zk_poker_frontend/src/lib/: analytics.ts  api.ts  balances.tsx  ctaConfig.ts  demoStreamEventSchema.ts  finalizedEnvelopeMapper.ts  finalizedEnvelopeSchema.ts  finalizedEnvelopeStream.ts  query.ts  socket.ts  supabaseClient.ts  tableSnapshotSchema.ts  toasts.ts
zk_poker_frontend/src/styles/: globals.css
zk_poker_frontend/src/types/: poker.ts
zk_poker_macros/: Cargo.toml
zk_poker_macros/src/: lib.rs
(+96 files in other folders)
