[package]
name = "zk_poker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bayer_groth_demo"
path = "src/bin/bayer_groth_demo.rs"

[dependencies]
ark-crypto-primitives = { version = "0.5.0", features = [
    "commitment",
    "r1cs",
    "sponge",
    "crh",
    "merkle_tree",
    "prf",
] }
ark-bn254 = "0.5.0"
ark-grumpkin = "0.5.0"
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = "0.5.0"
ark-relations = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = { version = "0.5.0", features = ["derive"] }
ark-std = "0.5.0"
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"
ark-snark = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-flame = "0.2"
once_cell = "1.20"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
sha3 = { version = "0.10", default-features = false }
hex = "0.4.3"
ark-bls12-381 = "0.5.0"

[dev-dependencies]
ark-test-curves = { version = "0.5.0", features = ["bls12_381_curve"] }

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
inherits = "release"
debug = true
