[package]
name = "zk_poker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bayer_groth_demo"
path = "src/bin/bayer_groth_demo.rs"


[[bin]]
name = "rs_shuffle_reencrypt_bench"
path = "src/bin/rs_shuffle_reencrypt_bench.rs"

[dependencies]
# Core algebra crates with optimizations
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [
    "std",
    "parallel",
    "asm",
] }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [
    "std",
    "parallel",
] }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [
    "std",
    "parallel",
] }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [
    "std",
    "derive",
] }
ark-std = { version = "0.5.0", default-features = false, features = [
    "std",
    "parallel",
] }

# SNARK libraries with parallel features
ark-snark = { git = "https://github.com/arkworks-rs/snark.git", default-features = false, features = [
] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16.git", default-features = false, features = [
    "std",
    "parallel",
] }
ark-relations = { git = "https://github.com/arkworks-rs/snark.git", default-features = false, features = [
    "std",
] }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git", default-features = false, features = [
    "std",
    "parallel",
] }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit.git", default-features = false, features = [
    "std",
    "parallel",
] }

# Crypto primitives with optimizations
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git", default-features = false, features = [
    "std",
    "commitment",
    "constraints",
    "sponge",
    "crh",
    "merkle_tree",
    "prf",
    "parallel",
    "snark",
] }

# Curve implementations
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [
    "std",
    "curve",
] }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [
    "std",
] }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [
    "std",
    "curve",
] }
ark-ed-on-bls12-381-bandersnatch = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [
    "std",
] }
ark-ed-on-bn254 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [
    "std",
    "r1cs",
] }
ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [
    "std",
] }

# Core utilities
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-flame = "0.2"
once_cell = "1.20"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
sha3 = { version = "0.10", default-features = false }
hex = "0.4.3"

# Backend dependencies
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
async-trait = "0.1"
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
parking_lot = "0.12"
dashmap = "6.1"
dotenv = "0.15"

# Supabase client dependencies
postgrest = "1.6"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
tokio-tungstenite = "0.24"
tokio-postgres = "0.7"
supabase-rust-realtime = "0.4"

# GPU acceleration dependencies (optional)
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", optional = true }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", optional = true }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", optional = true }
icicle-bls12-381 = { git = "https://github.com/ingonyama-zk/icicle.git", optional = true }

[dev-dependencies]
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra.git", features = [
    "bls12_381_curve",
] }

[features]
default = []
gpu = ["icicle-runtime", "icicle-core", "icicle-bn254", "icicle-bls12-381"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true

[patch.crates-io]
ark-relations = { git = "https://github.com/arkworks-rs/snark.git" }
ark-snark = { git = "https://github.com/arkworks-rs/snark.git" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-ed-on-bls12-381-bandersnatch = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-ed-on-bn254 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-mnt4-298 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16.git" }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit.git" }
